// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Launch api test Launch api test = failing 1`] = `
Object {
  "metadata": Object {
    "branchInfo": "noise_removed:branchInfo",
    "endedTimestamp": 26,
    "fileName": "noise_removed/packages/root-cause-core/lib/launch-api.test.ts",
    "hasNetworkLogs": true,
    "profilingFile": "profile.cpuprofile",
    "systemInfo": Object {
      "automationFramework": "puppeteer",
      "browser": "chromium",
      "browserPlatform": "noise_removed:browserPlatform",
      "browserVersion": "HeadlessChrome/85.0.4182.0",
      "modelName": "noise_removed:modelName",
      "modelVersion": "noise_removed:modelVersion",
      "pageViewport": Object {
        "height": 600,
        "width": 800,
      },
      "userAgent": "noise_removed:userAgent",
    },
    "testEndStatus": Object {
      "codeLocationDetails": Object {
        "callstack": Array [
          Object {
            "column": 29,
            "file": "lib/hooks/testEndHook.ts",
            "function": "testEndHook",
            "line": 17,
          },
          Object {
            "column": 15,
            "file": "lib/PuppeteerPageHooker.ts",
            "function": "PuppeteerPageHooker.end",
            "line": 188,
          },
          Object {
            "column": 5,
            "file": "lib/attach.ts",
            "function": "endTest",
            "line": 120,
          },
          Object {
            "column": 5,
            "file": "lib/launch.ts",
            "function": "Object.launchImpl",
            "line": 130,
          },
          Object {
            "column": 5,
            "file": "lib/launch-api.test.ts",
            "function": "Object.<anonymous>",
            "line": 110,
          },
        ],
        "codeLines": Array [
          "",
          "    const localRunId = guid();",
          "",
          "    await assert.rejects(() =>",
          "      launchImpl(",
          "        {",
          "          testName: testInfo.fullName,",
        ],
        "column": 5,
        "fromRowNumber": 107,
        "row": 110,
        "sourceFileRelativePath": "lib/launch-api.test.ts",
        "toRowNumber": 113,
      },
      "error": Object {
        "message": "'1' == '2'",
        "name": "AssertionError",
        "stack": "AssertionError [ERR_ASSERTION]: '1' == '2'
    at noise_removed/packages/root-cause-core/lib/launch-api.test.ts:143:18
    at Object.launchImpl (noise_removed/packages/root-cause-core/lib/launch.ts:124:5)
    at Object.<anonymous> (noise_removed/packages/root-cause-core/lib/launch-api.test.ts:110:5)",
      },
      "success": false,
    },
    "testFullName": "1-Launch api test Launch api test = failing",
    "testName": "Launch api test Launch api test = failing",
    "timestamp": 3,
    "traceOutputFileName": "performanceTrace.json",
  },
  "steps": Array [
    Object {
      "consoleEntries": Array [],
      "endTimestamp": 5,
      "fnName": "goto",
      "index": 1,
      "name": "goto \\"http://jsbin.testim.io/ner/1\\"",
      "screenshot": "1.page-goto.jpg",
      "startTimestamp": 4,
      "stepCodeLocation": Object {
        "callstack": Array [
          Object {
            "column": 18,
            "file": "lib/PuppeteerPageHooker.ts",
            "function": "Proxy.rootCauseWrappedFunction_Page_goto",
            "line": 156,
          },
          Object {
            "column": 11,
            "file": "lib/launch-api.test.ts",
            "line": 123,
          },
          Object {
            "column": 5,
            "file": "lib/launch.ts",
            "function": "Object.launchImpl",
            "line": 124,
          },
          Object {
            "column": 5,
            "file": "lib/launch-api.test.ts",
            "function": "Object.<anonymous>",
            "line": 110,
          },
        ],
        "codeLines": Array [
          "          _runId: localRunId,",
          "        },",
          "        async (page) => {",
          "          await page.goto('http://jsbin.testim.io/ner/1');",
          "",
          "          await page.click('#test');",
          "          await page.click('#test');",
        ],
        "column": 11,
        "fromRowNumber": 120,
        "row": 123,
        "sourceFileRelativePath": "lib/launch-api.test.ts",
        "toRowNumber": 126,
      },
      "text": "http://jsbin.testim.io/ner/1",
      "unhandledExceptions": Array [],
    },
    Object {
      "consoleEntries": Array [],
      "endTimestamp": 7,
      "fnName": "click",
      "index": 2,
      "name": "click \\"#test\\"",
      "rect": Object {
        "bottom": "possible noise removed",
        "devicePixelRatio": "possible noise removed",
        "height": "possible noise removed",
        "left": "possible noise removed",
        "right": "possible noise removed",
        "screenHeight": "possible noise removed",
        "screenWidth": "possible noise removed",
        "top": "possible noise removed",
        "width": "possible noise removed",
        "x": "possible noise removed",
        "y": "possible noise removed",
      },
      "screenshot": "2.page-click.jpg",
      "selector": "#test",
      "startTimestamp": 6,
      "stepCodeLocation": Object {
        "callstack": Array [
          Object {
            "column": 18,
            "file": "lib/PuppeteerPageHooker.ts",
            "function": "Proxy.rootCauseWrappedFunction_Page_click",
            "line": 156,
          },
          Object {
            "column": 11,
            "file": "lib/launch-api.test.ts",
            "line": 125,
          },
          Object {
            "column": 5,
            "file": "lib/launch.ts",
            "function": "Object.launchImpl",
            "line": 124,
          },
          Object {
            "column": 5,
            "file": "lib/launch-api.test.ts",
            "function": "Object.<anonymous>",
            "line": 110,
          },
        ],
        "codeLines": Array [
          "        async (page) => {",
          "          await page.goto('http://jsbin.testim.io/ner/1');",
          "",
          "          await page.click('#test');",
          "          await page.click('#test');",
          "          await page.click('#test');",
          "          await page.click('#test');",
        ],
        "column": 11,
        "fromRowNumber": 122,
        "row": 125,
        "sourceFileRelativePath": "lib/launch-api.test.ts",
        "toRowNumber": 128,
      },
      "unhandledExceptions": Array [],
    },
    Object {
      "consoleEntries": Array [],
      "endTimestamp": 9,
      "fnName": "click",
      "index": 3,
      "name": "click \\"#test\\"",
      "rect": Object {
        "bottom": "possible noise removed",
        "devicePixelRatio": "possible noise removed",
        "height": "possible noise removed",
        "left": "possible noise removed",
        "right": "possible noise removed",
        "screenHeight": "possible noise removed",
        "screenWidth": "possible noise removed",
        "top": "possible noise removed",
        "width": "possible noise removed",
        "x": "possible noise removed",
        "y": "possible noise removed",
      },
      "screenshot": "3.page-click.jpg",
      "selector": "#test",
      "startTimestamp": 8,
      "stepCodeLocation": Object {
        "callstack": Array [
          Object {
            "column": 18,
            "file": "lib/PuppeteerPageHooker.ts",
            "function": "Proxy.rootCauseWrappedFunction_Page_click",
            "line": 156,
          },
          Object {
            "column": 11,
            "file": "lib/launch-api.test.ts",
            "line": 126,
          },
          Object {
            "column": 5,
            "file": "lib/launch.ts",
            "function": "Object.launchImpl",
            "line": 124,
          },
          Object {
            "column": 5,
            "file": "lib/launch-api.test.ts",
            "function": "Object.<anonymous>",
            "line": 110,
          },
        ],
        "codeLines": Array [
          "          await page.goto('http://jsbin.testim.io/ner/1');",
          "",
          "          await page.click('#test');",
          "          await page.click('#test');",
          "          await page.click('#test');",
          "          await page.click('#test');",
          "          await page.click('#test');",
        ],
        "column": 11,
        "fromRowNumber": 123,
        "row": 126,
        "sourceFileRelativePath": "lib/launch-api.test.ts",
        "toRowNumber": 129,
      },
      "unhandledExceptions": Array [],
    },
    Object {
      "consoleEntries": Array [],
      "endTimestamp": 11,
      "fnName": "click",
      "index": 4,
      "name": "click \\"#test\\"",
      "rect": Object {
        "bottom": "possible noise removed",
        "devicePixelRatio": "possible noise removed",
        "height": "possible noise removed",
        "left": "possible noise removed",
        "right": "possible noise removed",
        "screenHeight": "possible noise removed",
        "screenWidth": "possible noise removed",
        "top": "possible noise removed",
        "width": "possible noise removed",
        "x": "possible noise removed",
        "y": "possible noise removed",
      },
      "screenshot": "4.page-click.jpg",
      "selector": "#test",
      "startTimestamp": 10,
      "stepCodeLocation": Object {
        "callstack": Array [
          Object {
            "column": 18,
            "file": "lib/PuppeteerPageHooker.ts",
            "function": "Proxy.rootCauseWrappedFunction_Page_click",
            "line": 156,
          },
          Object {
            "column": 11,
            "file": "lib/launch-api.test.ts",
            "line": 127,
          },
          Object {
            "column": 5,
            "file": "lib/launch.ts",
            "function": "Object.launchImpl",
            "line": 124,
          },
          Object {
            "column": 5,
            "file": "lib/launch-api.test.ts",
            "function": "Object.<anonymous>",
            "line": 110,
          },
        ],
        "codeLines": Array [
          "",
          "          await page.click('#test');",
          "          await page.click('#test');",
          "          await page.click('#test');",
          "          await page.click('#test');",
          "          await page.click('#test');",
          "          await page.click('#test');",
        ],
        "column": 11,
        "fromRowNumber": 124,
        "row": 127,
        "sourceFileRelativePath": "lib/launch-api.test.ts",
        "toRowNumber": 130,
      },
      "unhandledExceptions": Array [],
    },
    Object {
      "consoleEntries": Array [],
      "endTimestamp": 13,
      "fnName": "click",
      "index": 5,
      "name": "click \\"#test\\"",
      "rect": Object {
        "bottom": "possible noise removed",
        "devicePixelRatio": "possible noise removed",
        "height": "possible noise removed",
        "left": "possible noise removed",
        "right": "possible noise removed",
        "screenHeight": "possible noise removed",
        "screenWidth": "possible noise removed",
        "top": "possible noise removed",
        "width": "possible noise removed",
        "x": "possible noise removed",
        "y": "possible noise removed",
      },
      "screenshot": "5.page-click.jpg",
      "selector": "#test",
      "startTimestamp": 12,
      "stepCodeLocation": Object {
        "callstack": Array [
          Object {
            "column": 18,
            "file": "lib/PuppeteerPageHooker.ts",
            "function": "Proxy.rootCauseWrappedFunction_Page_click",
            "line": 156,
          },
          Object {
            "column": 11,
            "file": "lib/launch-api.test.ts",
            "line": 128,
          },
          Object {
            "column": 5,
            "file": "lib/launch.ts",
            "function": "Object.launchImpl",
            "line": 124,
          },
          Object {
            "column": 5,
            "file": "lib/launch-api.test.ts",
            "function": "Object.<anonymous>",
            "line": 110,
          },
        ],
        "codeLines": Array [
          "          await page.click('#test');",
          "          await page.click('#test');",
          "          await page.click('#test');",
          "          await page.click('#test');",
          "          await page.click('#test');",
          "          await page.click('#test');",
          "          await page.click('#reset');",
        ],
        "column": 11,
        "fromRowNumber": 125,
        "row": 128,
        "sourceFileRelativePath": "lib/launch-api.test.ts",
        "toRowNumber": 131,
      },
      "unhandledExceptions": Array [],
    },
    Object {
      "consoleEntries": Array [],
      "endTimestamp": 15,
      "fnName": "click",
      "index": 6,
      "name": "click \\"#test\\"",
      "rect": Object {
        "bottom": "possible noise removed",
        "devicePixelRatio": "possible noise removed",
        "height": "possible noise removed",
        "left": "possible noise removed",
        "right": "possible noise removed",
        "screenHeight": "possible noise removed",
        "screenWidth": "possible noise removed",
        "top": "possible noise removed",
        "width": "possible noise removed",
        "x": "possible noise removed",
        "y": "possible noise removed",
      },
      "screenshot": "6.page-click.jpg",
      "selector": "#test",
      "startTimestamp": 14,
      "stepCodeLocation": Object {
        "callstack": Array [
          Object {
            "column": 18,
            "file": "lib/PuppeteerPageHooker.ts",
            "function": "Proxy.rootCauseWrappedFunction_Page_click",
            "line": 156,
          },
          Object {
            "column": 11,
            "file": "lib/launch-api.test.ts",
            "line": 129,
          },
          Object {
            "column": 5,
            "file": "lib/launch.ts",
            "function": "Object.launchImpl",
            "line": 124,
          },
          Object {
            "column": 5,
            "file": "lib/launch-api.test.ts",
            "function": "Object.<anonymous>",
            "line": 110,
          },
        ],
        "codeLines": Array [
          "          await page.click('#test');",
          "          await page.click('#test');",
          "          await page.click('#test');",
          "          await page.click('#test');",
          "          await page.click('#test');",
          "          await page.click('#reset');",
          "          await page.click('#test');",
        ],
        "column": 11,
        "fromRowNumber": 126,
        "row": 129,
        "sourceFileRelativePath": "lib/launch-api.test.ts",
        "toRowNumber": 132,
      },
      "unhandledExceptions": Array [],
    },
    Object {
      "consoleEntries": Array [],
      "endTimestamp": 17,
      "fnName": "click",
      "index": 7,
      "name": "click \\"#test\\"",
      "rect": Object {
        "bottom": "possible noise removed",
        "devicePixelRatio": "possible noise removed",
        "height": "possible noise removed",
        "left": "possible noise removed",
        "right": "possible noise removed",
        "screenHeight": "possible noise removed",
        "screenWidth": "possible noise removed",
        "top": "possible noise removed",
        "width": "possible noise removed",
        "x": "possible noise removed",
        "y": "possible noise removed",
      },
      "screenshot": "7.page-click.jpg",
      "selector": "#test",
      "startTimestamp": 16,
      "stepCodeLocation": Object {
        "callstack": Array [
          Object {
            "column": 18,
            "file": "lib/PuppeteerPageHooker.ts",
            "function": "Proxy.rootCauseWrappedFunction_Page_click",
            "line": 156,
          },
          Object {
            "column": 11,
            "file": "lib/launch-api.test.ts",
            "line": 130,
          },
          Object {
            "column": 5,
            "file": "lib/launch.ts",
            "function": "Object.launchImpl",
            "line": 124,
          },
          Object {
            "column": 5,
            "file": "lib/launch-api.test.ts",
            "function": "Object.<anonymous>",
            "line": 110,
          },
        ],
        "codeLines": Array [
          "          await page.click('#test');",
          "          await page.click('#test');",
          "          await page.click('#test');",
          "          await page.click('#test');",
          "          await page.click('#reset');",
          "          await page.click('#test');",
          "",
        ],
        "column": 11,
        "fromRowNumber": 127,
        "row": 130,
        "sourceFileRelativePath": "lib/launch-api.test.ts",
        "toRowNumber": 133,
      },
      "unhandledExceptions": Array [],
    },
    Object {
      "consoleEntries": Array [],
      "endTimestamp": 19,
      "fnName": "click",
      "index": 8,
      "name": "click \\"#reset\\"",
      "rect": Object {
        "bottom": "possible noise removed",
        "devicePixelRatio": "possible noise removed",
        "height": "possible noise removed",
        "left": "possible noise removed",
        "right": "possible noise removed",
        "screenHeight": "possible noise removed",
        "screenWidth": "possible noise removed",
        "top": "possible noise removed",
        "width": "possible noise removed",
        "x": "possible noise removed",
        "y": "possible noise removed",
      },
      "screenshot": "8.page-click.jpg",
      "selector": "#reset",
      "startTimestamp": 18,
      "stepCodeLocation": Object {
        "callstack": Array [
          Object {
            "column": 18,
            "file": "lib/PuppeteerPageHooker.ts",
            "function": "Proxy.rootCauseWrappedFunction_Page_click",
            "line": 156,
          },
          Object {
            "column": 11,
            "file": "lib/launch-api.test.ts",
            "line": 131,
          },
          Object {
            "column": 5,
            "file": "lib/launch.ts",
            "function": "Object.launchImpl",
            "line": 124,
          },
          Object {
            "column": 5,
            "file": "lib/launch-api.test.ts",
            "function": "Object.<anonymous>",
            "line": 110,
          },
        ],
        "codeLines": Array [
          "          await page.click('#test');",
          "          await page.click('#test');",
          "          await page.click('#test');",
          "          await page.click('#reset');",
          "          await page.click('#test');",
          "",
          "          const counter = await page.$('#counter');",
        ],
        "column": 11,
        "fromRowNumber": 128,
        "row": 131,
        "sourceFileRelativePath": "lib/launch-api.test.ts",
        "toRowNumber": 134,
      },
      "unhandledExceptions": Array [],
    },
    Object {
      "consoleEntries": Array [],
      "endTimestamp": 21,
      "fnName": "click",
      "index": 9,
      "name": "click \\"#test\\"",
      "rect": Object {
        "bottom": "possible noise removed",
        "devicePixelRatio": "possible noise removed",
        "height": "possible noise removed",
        "left": "possible noise removed",
        "right": "possible noise removed",
        "screenHeight": "possible noise removed",
        "screenWidth": "possible noise removed",
        "top": "possible noise removed",
        "width": "possible noise removed",
        "x": "possible noise removed",
        "y": "possible noise removed",
      },
      "screenshot": "9.page-click.jpg",
      "selector": "#test",
      "startTimestamp": 20,
      "stepCodeLocation": Object {
        "callstack": Array [
          Object {
            "column": 18,
            "file": "lib/PuppeteerPageHooker.ts",
            "function": "Proxy.rootCauseWrappedFunction_Page_click",
            "line": 156,
          },
          Object {
            "column": 11,
            "file": "lib/launch-api.test.ts",
            "line": 132,
          },
          Object {
            "column": 5,
            "file": "lib/launch.ts",
            "function": "Object.launchImpl",
            "line": 124,
          },
          Object {
            "column": 5,
            "file": "lib/launch-api.test.ts",
            "function": "Object.<anonymous>",
            "line": 110,
          },
        ],
        "codeLines": Array [
          "          await page.click('#test');",
          "          await page.click('#test');",
          "          await page.click('#reset');",
          "          await page.click('#test');",
          "",
          "          const counter = await page.$('#counter');",
          "",
        ],
        "column": 11,
        "fromRowNumber": 129,
        "row": 132,
        "sourceFileRelativePath": "lib/launch-api.test.ts",
        "toRowNumber": 135,
      },
      "unhandledExceptions": Array [],
    },
    Object {
      "consoleEntries": Array [],
      "endTimestamp": 23,
      "fnName": "$",
      "index": 10,
      "name": "$ \\"#counter\\"",
      "rect": Object {
        "bottom": "possible noise removed",
        "devicePixelRatio": "possible noise removed",
        "height": "possible noise removed",
        "left": "possible noise removed",
        "right": "possible noise removed",
        "screenHeight": "possible noise removed",
        "screenWidth": "possible noise removed",
        "top": "possible noise removed",
        "width": "possible noise removed",
        "x": "possible noise removed",
        "y": "possible noise removed",
      },
      "screenshot": "10.page-$.jpg",
      "selector": "#counter",
      "startTimestamp": 22,
      "stepCodeLocation": Object {
        "callstack": Array [
          Object {
            "column": 30,
            "file": "lib/PuppeteerPageHooker.ts",
            "function": "Proxy.returningElementHandlesViaPromiseWrappedFunction_Page_$",
            "line": 122,
          },
          Object {
            "column": 27,
            "file": "lib/launch-api.test.ts",
            "line": 134,
          },
          Object {
            "column": 5,
            "file": "lib/launch.ts",
            "function": "Object.launchImpl",
            "line": 124,
          },
          Object {
            "column": 5,
            "file": "lib/launch-api.test.ts",
            "function": "Object.<anonymous>",
            "line": 110,
          },
        ],
        "codeLines": Array [
          "          await page.click('#reset');",
          "          await page.click('#test');",
          "",
          "          const counter = await page.$('#counter');",
          "",
          "          if (!counter) {",
          "            throw new Error('counter not found');",
        ],
        "column": 27,
        "fromRowNumber": 131,
        "row": 134,
        "sourceFileRelativePath": "lib/launch-api.test.ts",
        "toRowNumber": 137,
      },
      "unhandledExceptions": Array [],
    },
    Object {
      "consoleEntries": Array [],
      "endTimestamp": 25,
      "fnName": "getProperty",
      "index": 11,
      "name": "getProperty \\"innerText\\" on \\"#counter\\"",
      "rect": Object {
        "bottom": "possible noise removed",
        "devicePixelRatio": "possible noise removed",
        "height": "possible noise removed",
        "left": "possible noise removed",
        "right": "possible noise removed",
        "screenHeight": "possible noise removed",
        "screenWidth": "possible noise removed",
        "top": "possible noise removed",
        "width": "possible noise removed",
        "x": "possible noise removed",
        "y": "possible noise removed",
      },
      "screenshot": "11.elementhandle-getProperty.jpg",
      "selector": "#counter",
      "startTimestamp": 24,
      "stepCodeLocation": Object {
        "callstack": Array [
          Object {
            "column": 18,
            "file": "lib/PuppeteerPageHooker.ts",
            "function": "Proxy.rootCauseWrappedFunction_ElementHandle_getProperty",
            "line": 156,
          },
          Object {
            "column": 28,
            "file": "lib/launch-api.test.ts",
            "line": 140,
          },
          Object {
            "column": 5,
            "file": "lib/launch.ts",
            "function": "Object.launchImpl",
            "line": 124,
          },
          Object {
            "column": 5,
            "file": "lib/launch-api.test.ts",
            "function": "Object.<anonymous>",
            "line": 110,
          },
        ],
        "codeLines": Array [
          "            throw new Error('counter not found');",
          "          }",
          "",
          "          const textProp = await counter.getProperty('innerText');",
          "          const text = await textProp.jsonValue();",
          "",
          "          assert.equal(text, '2');",
        ],
        "column": 28,
        "fromRowNumber": 137,
        "row": 140,
        "sourceFileRelativePath": "lib/launch-api.test.ts",
        "toRowNumber": 143,
      },
      "text": "innerText",
      "unhandledExceptions": Array [],
    },
  ],
}
`;

exports[`Launch api test Launch api test passing 1`] = `
Object {
  "metadata": Object {
    "branchInfo": "noise_removed:branchInfo",
    "endedTimestamp": 26,
    "fileName": "noise_removed/packages/root-cause-core/lib/launch-api.test.ts",
    "hasNetworkLogs": true,
    "profilingFile": "profile.cpuprofile",
    "systemInfo": Object {
      "automationFramework": "puppeteer",
      "browser": "chromium",
      "browserPlatform": "noise_removed:browserPlatform",
      "browserVersion": "HeadlessChrome/85.0.4182.0",
      "modelName": "noise_removed:modelName",
      "modelVersion": "noise_removed:modelVersion",
      "pageViewport": Object {
        "height": 600,
        "width": 800,
      },
      "userAgent": "noise_removed:userAgent",
    },
    "testEndStatus": Object {
      "success": true,
    },
    "testFullName": "1-Launch api test Launch api test passing",
    "testName": "Launch api test Launch api test passing",
    "timestamp": 3,
    "traceOutputFileName": "performanceTrace.json",
  },
  "steps": Array [
    Object {
      "consoleEntries": Array [],
      "endTimestamp": 5,
      "fnName": "goto",
      "index": 1,
      "name": "goto \\"http://jsbin.testim.io/ner/1\\"",
      "screenshot": "1.page-goto.jpg",
      "startTimestamp": 4,
      "stepCodeLocation": Object {
        "callstack": Array [
          Object {
            "column": 18,
            "file": "lib/PuppeteerPageHooker.ts",
            "function": "Proxy.rootCauseWrappedFunction_Page_goto",
            "line": 156,
          },
          Object {
            "column": 9,
            "file": "lib/launch-api.test.ts",
            "line": 49,
          },
          Object {
            "column": 5,
            "file": "lib/launch.ts",
            "function": "Object.launchImpl",
            "line": 124,
          },
          Object {
            "column": 5,
            "file": "lib/launch-api.test.ts",
            "function": "Object.<anonymous>",
            "line": 37,
          },
        ],
        "codeLines": Array [
          "        _runId: localRunId,",
          "      },",
          "      async (page) => {",
          "        await page.goto('http://jsbin.testim.io/ner/1');",
          "",
          "        await page.click('#test');",
          "        await page.click('#test');",
        ],
        "column": 9,
        "fromRowNumber": 46,
        "row": 49,
        "sourceFileRelativePath": "lib/launch-api.test.ts",
        "toRowNumber": 52,
      },
      "text": "http://jsbin.testim.io/ner/1",
      "unhandledExceptions": Array [],
    },
    Object {
      "consoleEntries": Array [],
      "endTimestamp": 7,
      "fnName": "click",
      "index": 2,
      "name": "click \\"#test\\"",
      "rect": Object {
        "bottom": "possible noise removed",
        "devicePixelRatio": "possible noise removed",
        "height": "possible noise removed",
        "left": "possible noise removed",
        "right": "possible noise removed",
        "screenHeight": "possible noise removed",
        "screenWidth": "possible noise removed",
        "top": "possible noise removed",
        "width": "possible noise removed",
        "x": "possible noise removed",
        "y": "possible noise removed",
      },
      "screenshot": "2.page-click.jpg",
      "selector": "#test",
      "startTimestamp": 6,
      "stepCodeLocation": Object {
        "callstack": Array [
          Object {
            "column": 18,
            "file": "lib/PuppeteerPageHooker.ts",
            "function": "Proxy.rootCauseWrappedFunction_Page_click",
            "line": 156,
          },
          Object {
            "column": 9,
            "file": "lib/launch-api.test.ts",
            "line": 51,
          },
          Object {
            "column": 5,
            "file": "lib/launch.ts",
            "function": "Object.launchImpl",
            "line": 124,
          },
          Object {
            "column": 5,
            "file": "lib/launch-api.test.ts",
            "function": "Object.<anonymous>",
            "line": 37,
          },
        ],
        "codeLines": Array [
          "      async (page) => {",
          "        await page.goto('http://jsbin.testim.io/ner/1');",
          "",
          "        await page.click('#test');",
          "        await page.click('#test');",
          "        await page.click('#test');",
          "        await page.click('#test');",
        ],
        "column": 9,
        "fromRowNumber": 48,
        "row": 51,
        "sourceFileRelativePath": "lib/launch-api.test.ts",
        "toRowNumber": 54,
      },
      "unhandledExceptions": Array [],
    },
    Object {
      "consoleEntries": Array [],
      "endTimestamp": 9,
      "fnName": "click",
      "index": 3,
      "name": "click \\"#test\\"",
      "rect": Object {
        "bottom": "possible noise removed",
        "devicePixelRatio": "possible noise removed",
        "height": "possible noise removed",
        "left": "possible noise removed",
        "right": "possible noise removed",
        "screenHeight": "possible noise removed",
        "screenWidth": "possible noise removed",
        "top": "possible noise removed",
        "width": "possible noise removed",
        "x": "possible noise removed",
        "y": "possible noise removed",
      },
      "screenshot": "3.page-click.jpg",
      "selector": "#test",
      "startTimestamp": 8,
      "stepCodeLocation": Object {
        "callstack": Array [
          Object {
            "column": 18,
            "file": "lib/PuppeteerPageHooker.ts",
            "function": "Proxy.rootCauseWrappedFunction_Page_click",
            "line": 156,
          },
          Object {
            "column": 9,
            "file": "lib/launch-api.test.ts",
            "line": 52,
          },
          Object {
            "column": 5,
            "file": "lib/launch.ts",
            "function": "Object.launchImpl",
            "line": 124,
          },
          Object {
            "column": 5,
            "file": "lib/launch-api.test.ts",
            "function": "Object.<anonymous>",
            "line": 37,
          },
        ],
        "codeLines": Array [
          "        await page.goto('http://jsbin.testim.io/ner/1');",
          "",
          "        await page.click('#test');",
          "        await page.click('#test');",
          "        await page.click('#test');",
          "        await page.click('#test');",
          "        await page.click('#test');",
        ],
        "column": 9,
        "fromRowNumber": 49,
        "row": 52,
        "sourceFileRelativePath": "lib/launch-api.test.ts",
        "toRowNumber": 55,
      },
      "unhandledExceptions": Array [],
    },
    Object {
      "consoleEntries": Array [],
      "endTimestamp": 11,
      "fnName": "click",
      "index": 4,
      "name": "click \\"#test\\"",
      "rect": Object {
        "bottom": "possible noise removed",
        "devicePixelRatio": "possible noise removed",
        "height": "possible noise removed",
        "left": "possible noise removed",
        "right": "possible noise removed",
        "screenHeight": "possible noise removed",
        "screenWidth": "possible noise removed",
        "top": "possible noise removed",
        "width": "possible noise removed",
        "x": "possible noise removed",
        "y": "possible noise removed",
      },
      "screenshot": "4.page-click.jpg",
      "selector": "#test",
      "startTimestamp": 10,
      "stepCodeLocation": Object {
        "callstack": Array [
          Object {
            "column": 18,
            "file": "lib/PuppeteerPageHooker.ts",
            "function": "Proxy.rootCauseWrappedFunction_Page_click",
            "line": 156,
          },
          Object {
            "column": 9,
            "file": "lib/launch-api.test.ts",
            "line": 53,
          },
          Object {
            "column": 5,
            "file": "lib/launch.ts",
            "function": "Object.launchImpl",
            "line": 124,
          },
          Object {
            "column": 5,
            "file": "lib/launch-api.test.ts",
            "function": "Object.<anonymous>",
            "line": 37,
          },
        ],
        "codeLines": Array [
          "",
          "        await page.click('#test');",
          "        await page.click('#test');",
          "        await page.click('#test');",
          "        await page.click('#test');",
          "        await page.click('#test');",
          "        await page.click('#test');",
        ],
        "column": 9,
        "fromRowNumber": 50,
        "row": 53,
        "sourceFileRelativePath": "lib/launch-api.test.ts",
        "toRowNumber": 56,
      },
      "unhandledExceptions": Array [],
    },
    Object {
      "consoleEntries": Array [],
      "endTimestamp": 13,
      "fnName": "click",
      "index": 5,
      "name": "click \\"#test\\"",
      "rect": Object {
        "bottom": "possible noise removed",
        "devicePixelRatio": "possible noise removed",
        "height": "possible noise removed",
        "left": "possible noise removed",
        "right": "possible noise removed",
        "screenHeight": "possible noise removed",
        "screenWidth": "possible noise removed",
        "top": "possible noise removed",
        "width": "possible noise removed",
        "x": "possible noise removed",
        "y": "possible noise removed",
      },
      "screenshot": "5.page-click.jpg",
      "selector": "#test",
      "startTimestamp": 12,
      "stepCodeLocation": Object {
        "callstack": Array [
          Object {
            "column": 18,
            "file": "lib/PuppeteerPageHooker.ts",
            "function": "Proxy.rootCauseWrappedFunction_Page_click",
            "line": 156,
          },
          Object {
            "column": 9,
            "file": "lib/launch-api.test.ts",
            "line": 54,
          },
          Object {
            "column": 5,
            "file": "lib/launch.ts",
            "function": "Object.launchImpl",
            "line": 124,
          },
          Object {
            "column": 5,
            "file": "lib/launch-api.test.ts",
            "function": "Object.<anonymous>",
            "line": 37,
          },
        ],
        "codeLines": Array [
          "        await page.click('#test');",
          "        await page.click('#test');",
          "        await page.click('#test');",
          "        await page.click('#test');",
          "        await page.click('#test');",
          "        await page.click('#test');",
          "        await page.click('#reset');",
        ],
        "column": 9,
        "fromRowNumber": 51,
        "row": 54,
        "sourceFileRelativePath": "lib/launch-api.test.ts",
        "toRowNumber": 57,
      },
      "unhandledExceptions": Array [],
    },
    Object {
      "consoleEntries": Array [],
      "endTimestamp": 15,
      "fnName": "click",
      "index": 6,
      "name": "click \\"#test\\"",
      "rect": Object {
        "bottom": "possible noise removed",
        "devicePixelRatio": "possible noise removed",
        "height": "possible noise removed",
        "left": "possible noise removed",
        "right": "possible noise removed",
        "screenHeight": "possible noise removed",
        "screenWidth": "possible noise removed",
        "top": "possible noise removed",
        "width": "possible noise removed",
        "x": "possible noise removed",
        "y": "possible noise removed",
      },
      "screenshot": "6.page-click.jpg",
      "selector": "#test",
      "startTimestamp": 14,
      "stepCodeLocation": Object {
        "callstack": Array [
          Object {
            "column": 18,
            "file": "lib/PuppeteerPageHooker.ts",
            "function": "Proxy.rootCauseWrappedFunction_Page_click",
            "line": 156,
          },
          Object {
            "column": 9,
            "file": "lib/launch-api.test.ts",
            "line": 55,
          },
          Object {
            "column": 5,
            "file": "lib/launch.ts",
            "function": "Object.launchImpl",
            "line": 124,
          },
          Object {
            "column": 5,
            "file": "lib/launch-api.test.ts",
            "function": "Object.<anonymous>",
            "line": 37,
          },
        ],
        "codeLines": Array [
          "        await page.click('#test');",
          "        await page.click('#test');",
          "        await page.click('#test');",
          "        await page.click('#test');",
          "        await page.click('#test');",
          "        await page.click('#reset');",
          "        await page.click('#test');",
        ],
        "column": 9,
        "fromRowNumber": 52,
        "row": 55,
        "sourceFileRelativePath": "lib/launch-api.test.ts",
        "toRowNumber": 58,
      },
      "unhandledExceptions": Array [],
    },
    Object {
      "consoleEntries": Array [],
      "endTimestamp": 17,
      "fnName": "click",
      "index": 7,
      "name": "click \\"#test\\"",
      "rect": Object {
        "bottom": "possible noise removed",
        "devicePixelRatio": "possible noise removed",
        "height": "possible noise removed",
        "left": "possible noise removed",
        "right": "possible noise removed",
        "screenHeight": "possible noise removed",
        "screenWidth": "possible noise removed",
        "top": "possible noise removed",
        "width": "possible noise removed",
        "x": "possible noise removed",
        "y": "possible noise removed",
      },
      "screenshot": "7.page-click.jpg",
      "selector": "#test",
      "startTimestamp": 16,
      "stepCodeLocation": Object {
        "callstack": Array [
          Object {
            "column": 18,
            "file": "lib/PuppeteerPageHooker.ts",
            "function": "Proxy.rootCauseWrappedFunction_Page_click",
            "line": 156,
          },
          Object {
            "column": 9,
            "file": "lib/launch-api.test.ts",
            "line": 56,
          },
          Object {
            "column": 5,
            "file": "lib/launch.ts",
            "function": "Object.launchImpl",
            "line": 124,
          },
          Object {
            "column": 5,
            "file": "lib/launch-api.test.ts",
            "function": "Object.<anonymous>",
            "line": 37,
          },
        ],
        "codeLines": Array [
          "        await page.click('#test');",
          "        await page.click('#test');",
          "        await page.click('#test');",
          "        await page.click('#test');",
          "        await page.click('#reset');",
          "        await page.click('#test');",
          "",
        ],
        "column": 9,
        "fromRowNumber": 53,
        "row": 56,
        "sourceFileRelativePath": "lib/launch-api.test.ts",
        "toRowNumber": 59,
      },
      "unhandledExceptions": Array [],
    },
    Object {
      "consoleEntries": Array [],
      "endTimestamp": 19,
      "fnName": "click",
      "index": 8,
      "name": "click \\"#reset\\"",
      "rect": Object {
        "bottom": "possible noise removed",
        "devicePixelRatio": "possible noise removed",
        "height": "possible noise removed",
        "left": "possible noise removed",
        "right": "possible noise removed",
        "screenHeight": "possible noise removed",
        "screenWidth": "possible noise removed",
        "top": "possible noise removed",
        "width": "possible noise removed",
        "x": "possible noise removed",
        "y": "possible noise removed",
      },
      "screenshot": "8.page-click.jpg",
      "selector": "#reset",
      "startTimestamp": 18,
      "stepCodeLocation": Object {
        "callstack": Array [
          Object {
            "column": 18,
            "file": "lib/PuppeteerPageHooker.ts",
            "function": "Proxy.rootCauseWrappedFunction_Page_click",
            "line": 156,
          },
          Object {
            "column": 9,
            "file": "lib/launch-api.test.ts",
            "line": 57,
          },
          Object {
            "column": 5,
            "file": "lib/launch.ts",
            "function": "Object.launchImpl",
            "line": 124,
          },
          Object {
            "column": 5,
            "file": "lib/launch-api.test.ts",
            "function": "Object.<anonymous>",
            "line": 37,
          },
        ],
        "codeLines": Array [
          "        await page.click('#test');",
          "        await page.click('#test');",
          "        await page.click('#test');",
          "        await page.click('#reset');",
          "        await page.click('#test');",
          "",
          "        const counter = await page.$('#counter');",
        ],
        "column": 9,
        "fromRowNumber": 54,
        "row": 57,
        "sourceFileRelativePath": "lib/launch-api.test.ts",
        "toRowNumber": 60,
      },
      "unhandledExceptions": Array [],
    },
    Object {
      "consoleEntries": Array [],
      "endTimestamp": 21,
      "fnName": "click",
      "index": 9,
      "name": "click \\"#test\\"",
      "rect": Object {
        "bottom": "possible noise removed",
        "devicePixelRatio": "possible noise removed",
        "height": "possible noise removed",
        "left": "possible noise removed",
        "right": "possible noise removed",
        "screenHeight": "possible noise removed",
        "screenWidth": "possible noise removed",
        "top": "possible noise removed",
        "width": "possible noise removed",
        "x": "possible noise removed",
        "y": "possible noise removed",
      },
      "screenshot": "9.page-click.jpg",
      "selector": "#test",
      "startTimestamp": 20,
      "stepCodeLocation": Object {
        "callstack": Array [
          Object {
            "column": 18,
            "file": "lib/PuppeteerPageHooker.ts",
            "function": "Proxy.rootCauseWrappedFunction_Page_click",
            "line": 156,
          },
          Object {
            "column": 9,
            "file": "lib/launch-api.test.ts",
            "line": 58,
          },
          Object {
            "column": 5,
            "file": "lib/launch.ts",
            "function": "Object.launchImpl",
            "line": 124,
          },
          Object {
            "column": 5,
            "file": "lib/launch-api.test.ts",
            "function": "Object.<anonymous>",
            "line": 37,
          },
        ],
        "codeLines": Array [
          "        await page.click('#test');",
          "        await page.click('#test');",
          "        await page.click('#reset');",
          "        await page.click('#test');",
          "",
          "        const counter = await page.$('#counter');",
          "",
        ],
        "column": 9,
        "fromRowNumber": 55,
        "row": 58,
        "sourceFileRelativePath": "lib/launch-api.test.ts",
        "toRowNumber": 61,
      },
      "unhandledExceptions": Array [],
    },
    Object {
      "consoleEntries": Array [],
      "endTimestamp": 23,
      "fnName": "$",
      "index": 10,
      "name": "$ \\"#counter\\"",
      "rect": Object {
        "bottom": "possible noise removed",
        "devicePixelRatio": "possible noise removed",
        "height": "possible noise removed",
        "left": "possible noise removed",
        "right": "possible noise removed",
        "screenHeight": "possible noise removed",
        "screenWidth": "possible noise removed",
        "top": "possible noise removed",
        "width": "possible noise removed",
        "x": "possible noise removed",
        "y": "possible noise removed",
      },
      "screenshot": "10.page-$.jpg",
      "selector": "#counter",
      "startTimestamp": 22,
      "stepCodeLocation": Object {
        "callstack": Array [
          Object {
            "column": 30,
            "file": "lib/PuppeteerPageHooker.ts",
            "function": "Proxy.returningElementHandlesViaPromiseWrappedFunction_Page_$",
            "line": 122,
          },
          Object {
            "column": 25,
            "file": "lib/launch-api.test.ts",
            "line": 60,
          },
          Object {
            "column": 5,
            "file": "lib/launch.ts",
            "function": "Object.launchImpl",
            "line": 124,
          },
          Object {
            "column": 5,
            "file": "lib/launch-api.test.ts",
            "function": "Object.<anonymous>",
            "line": 37,
          },
        ],
        "codeLines": Array [
          "        await page.click('#reset');",
          "        await page.click('#test');",
          "",
          "        const counter = await page.$('#counter');",
          "",
          "        if (!counter) {",
          "          throw new Error('counter not found');",
        ],
        "column": 25,
        "fromRowNumber": 57,
        "row": 60,
        "sourceFileRelativePath": "lib/launch-api.test.ts",
        "toRowNumber": 63,
      },
      "unhandledExceptions": Array [],
    },
    Object {
      "consoleEntries": Array [],
      "endTimestamp": 25,
      "fnName": "getProperty",
      "index": 11,
      "name": "getProperty \\"innerText\\" on \\"#counter\\"",
      "rect": Object {
        "bottom": "possible noise removed",
        "devicePixelRatio": "possible noise removed",
        "height": "possible noise removed",
        "left": "possible noise removed",
        "right": "possible noise removed",
        "screenHeight": "possible noise removed",
        "screenWidth": "possible noise removed",
        "top": "possible noise removed",
        "width": "possible noise removed",
        "x": "possible noise removed",
        "y": "possible noise removed",
      },
      "screenshot": "11.elementhandle-getProperty.jpg",
      "selector": "#counter",
      "startTimestamp": 24,
      "stepCodeLocation": Object {
        "callstack": Array [
          Object {
            "column": 18,
            "file": "lib/PuppeteerPageHooker.ts",
            "function": "Proxy.rootCauseWrappedFunction_ElementHandle_getProperty",
            "line": 156,
          },
          Object {
            "column": 26,
            "file": "lib/launch-api.test.ts",
            "line": 66,
          },
          Object {
            "column": 5,
            "file": "lib/launch.ts",
            "function": "Object.launchImpl",
            "line": 124,
          },
          Object {
            "column": 5,
            "file": "lib/launch-api.test.ts",
            "function": "Object.<anonymous>",
            "line": 37,
          },
        ],
        "codeLines": Array [
          "          throw new Error('counter not found');",
          "        }",
          "",
          "        const textProp = await counter.getProperty('innerText');",
          "        const text = await textProp.jsonValue();",
          "",
          "        assert.equal(text, '1');",
        ],
        "column": 26,
        "fromRowNumber": 63,
        "row": 66,
        "sourceFileRelativePath": "lib/launch-api.test.ts",
        "toRowNumber": 69,
      },
      "text": "innerText",
      "unhandledExceptions": Array [],
    },
  ],
}
`;
